<resources>
    <string name="app_name">Megha</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="my_name">Megha Aggarwal</string>
    <string name="my_title">It\'s not about what you want it\'s about how hard you want it</string>
    <string name="short_desc">I am currently pursuing my Bachelors in Technology in Computer Science from IGDTUW. I love to code and see how it can changed the world in a way we can\'t event think of. Android App Development, Algorithms, and Operating Systems fascinates me.</string>
    <string name="my_github_username">codeb1ooded</string>
    <string name="view_code"> View code on github </string>
    <string name="view_demo"> View demo </string>
    <string name="get_apk"> Get the apk link </string>
    <string name="github_link">http://codeb1ooded.github.io/</string>
    <string name="email_id">meghaaggarwal493@gmail.com</string>

    <string name="cv_text">CV</string>
    <string name="android_developer">4 android developer</string>
    <string name="sophomore_text">Full time sophomore at IGDTUW</string>
    <string name="project_text">Projects</string>
    <string name="for_more_text">For more</string>
    <string name="tell_blog">Blog: codeb1ooded.github.io</string>
    <string name="tell_github">Github: github.com/codeb1ooded</string>

    <string name="project_rti">RTI Management System</string>
    <string name="project_movieplate">MoviePlate</string>
    <string name="project_othello">Othello</string>
    <string name="project_eventley">Eventley</string>
    <string name="project_scientific_calculator">Scientific Calculator</string>

    <string name="tech_programming_languages">Programming Languages</string>
    <string name="tech_web_technologies">Web Technologies</string>
    <string name="tech_app_development">Android App Development</string>
    <string name="tech_operating_systems">Operating Systems</string>
    <string name="tech_software_packages">Software Packages</string>
    <string name="tech_miscellaneous">Miscellaneous</string>

    <string name="courses_online">Online Courses</string>
    <string name="courses_graduate">Graduate</string>
    <string name="courses_outside">External Classrooms</string>

    <string name="contact_github">Github \t</string>
    <string name="contact_linkedin">Linked In \t</string>
    <string name="contact_facebook">Facebook \t</string>
    <string name="contact_google">Google Plus \t</string>
    <string name="contact_twitter">Twitter \t</string>

    <string name="achievement_academic">Academic Achievement</string>
    <string name="achievement_technical">Technical Achievement</string>
    <string name="achievement_miscellaneous">Miscellaneous Achievement</string>

    <string name="misc_social_work">Social Work</string>
    <string name="misc_pos_responsibilty">Positions of responsibility</string>
    <string name="misc_education">Education</string>

    <string name="skill_title_android"> Android </string>
    <string name="skill_title_algorithm"> Algorithm </string>
    <string name="skill_title_gitngithub"> Git \u0026 Github </string>
    <string name="skill_title_database"> Databases </string>
    <string name="skill_title_linux"> Linux </string>
    <string name="skill_title_pythonndjango"> Python \u0026 Django </string>
    <string name="skill_title_phpnxampp"> Php \u0026 Xampp </string>
    <string name="skill_title_java"> Java </string>
    <string name="skill_title_cncpp"> C \u0026 C++ </string>
    <string name="skill_title_ehacking"> Ethical Hacking </string>
    <string name="skill_title_frontend"> Html, CSS \u0026 JS</string>

    <string name="skill_sub_title_android"> App Development </string>
    <string name="skill_sub_title_algorithm"> Computational Thinking </string>
    <string name="skill_sub_title_gitngithub"> Version Control and Social Coding </string>
    <string name="skill_sub_title_database"> Data Storage </string>
    <string name="skill_sub_title_linux"> Operating Systems </string>
    <string name="skill_sub_title_pythonndjango"> Framework </string>
    <string name="skill_sub_title_phpnxampp"> Backend Development </string>
    <string name="skill_sub_title_java"> Programming Language </string>
    <string name="skill_sub_title_cncpp"> Programming language</string>
    <string name="skill_sub_title_frontend"> Front-end Development </string>

    <string name="skill_content_android">I knows the basic and some advanced concepts of Android app development. Created some apps, MoviePlate being major of them. I also have worked with some libraries and git repos of them in android.</string>
    <string name="skill_content_algorithm">Perhaps the most important principle for the good algorithm designer is to refuse to be content. OK, Can we do better?</string>
    <string name="skill_content_gitngithub">I have hosted all my projects on github and use it to manage them on regular basis. I know basics of git and github.</string>
    <string name="skill_content_database">Data being the important thing and its manipulation even more important, I have worked with many databases in different technologies</string>
    <string name="skill_content_linux">Shifted to Linux from window not so long ago, I found it best operating system and use it as default. I have worked on many distros of linux like Ubuntu, CentOS, Fedora, Kali Linux, Backtrack, etc.</string>
    <string name="skill_content_pythonndjango">I have created a website using Python and Django. I know their basics.</string>
    <string name="skill_content_phpnxampp">My one of the best projects is in PHP, i.e., RTI management system. I learned and worked with php during my RTI project only</string>
    <string name="skill_content_java">My language to code some of the times. I knows the basics of language and some libraries and know how to implement most of the DS in Java.</string>
    <string name="skill_content_cncpp">C++ was my first language and still the default language to code. I have created a library management system in 12th in C++</string>
    <string name="skill_content_ehacking">I knows basic of Ethical Hacking and have done 40 day training of Ethical Hacking from I3indya Technologies. I learned many new things during this phase.</string>
    <string name="skill_content_frontend">I am a newbie in HTML, CSS and JS. I have learned them from sites like W3Schools, codeacademy, etc. and have used this knowledge in some of my projects also.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="project_description_othello">Othello is orignially a 1988 video game published by Acclaim Entertainment, made for the Nintendo Entertainment System. This project is also a board game based on similar concept made with help of Java and its libraries with a UI interface. (Command based also available)</string>
    <string name="project_description_eventley">Whenever, you want to utilize your weekend in some great and enjoying holiday, you would most probably found yourselves confused of where to spend that time to make most of it. Or when you visit a new place and have no idea of main attractions of place, then what to do? That\'s where, Eventley came to rescue. Eventley help you to find popular and relevant(weather on day is fine) events near you on basis of your choice of category (like education, sports, culture, entertainment, etc.) by analyzing events based on number of likes, number of comments, number of images , weather at time of event, etc.</string>
    <string name="project_description_calculator">An android app which not only includes basic mathematics or some scientfic  functions, but also, conversion of number system</string>
    <string name="project_description_movieplate">It is an android app to let you browse popular, rated and now playing movies and TV shows. Also it allows you to add TV shows or movies to your watchlist and see your watchlist. This app is built using MovieDB and OMDB apis. This is a proptotype but we are working on many more features.</string>
    <string name="project_description_rtims">RTI management in government institutions is pen and paper based. Due to this it creates lot of issues like mismanagement, diffulty in analysis &amp; report generateion, redundancy, storage problems, etc. This project focuses on automating this RTI system in government institutions to get rid of most of the problems caused by pen and paper based system..</string>

    <string name="project_tech_used_othello"><b>Technologies Used</b> \n Java and its GUI and other libraries (swing, awt, arraylist, etc.)</string>
    <string name="project_tech_used_eventley"><b>Technologies Used</b> \n Frontend Development: HTML, CSS, JS \n Backend Development: Python and Django \n APIs: Eventful api, Google Maps, Open whether api, Plotly for visualization</string>
    <string name="project_tech_used_calculator"><b>Technologies Used</b> \n Java, XML, Android libraries, Data Structures </string>
    <string name="project_tech_used_movieplate"><b>Technologies Used</b> \n Java, XML, APIs, Android libraries(Retrofit, GSON, Picasso, etc.), MySQL Database </string>
    <string name="project_tech_used_rtims"><b>Technologies Used</b> \n Frontend Development: HTML, CSS, Bootstrap, JS \n Backend Development: PHP \n Database Storage: XAMPP, MySQL Database </string>

    <string name="developer_othello"><b> Developer </b> \n Megha Aggarwal </string>
    <string name="developer_eventley"><b> Developers </b> \n Aishwarya Sharma, Ankita Jain, Megha Aggarwal, Nitika Jain, Saloni Bhatia</string>
    <string name="developer_calculator"><b> Developer </b> \n Megha Aggarwal </string>
    <string name="developer_movieplate"><b> Developers </b> \n Himanshu Singhal, Manisha Poddar, Megha Aggarwal, Sachin Aggarwal </string>
    <string name="developer_rti"><b> Developers </b> \n Bhavya Garg, Megha Aggarwal, Saloni Bhatia, Utkarsha Goswami</string>
</resources>
