<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin"
        android:text="@string/misc_education"
        android:textAllCaps="false"
        android:textSize="@dimen/medium_text_size"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin"
        android:text="@string/misc_social_work"
        android:textAllCaps="false"
        android:textSize="@dimen/medium_text_size"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin"
        android:text="@string/misc_pos_responsibilty"
        android:textAllCaps="false"
        android:textSize="@dimen/medium_text_size"/>

</LinearLayout>