<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkest">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLightest"
                android:textAlignment="center"
                android:textSize="@dimen/big_text_size"
                android:text="@string/project_movieplate"
                android:layout_margin="@dimen/margin"/>
            <com.igdtuw.megha.megha.CustomLayout.AutoSwitchViewPager
                android:id="@+id/containerProjectMovieplateFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLightest"
                android:layout_margin="@dimen/margin"
                android:textSize="@dimen/small_text_size"
                android:textAlignment="center"
                android:text="@string/project_description_movieplate"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLightest"
                android:layout_margin="@dimen/margin"
                android:textSize="@dimen/small_text_size"
                android:textAlignment="center"
                android:text="@string/project_tech_used_movieplate"/>
            <!--<Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_demo"
                android:background="@android:color/transparent"
                android:textColor="@color/colorLightest"
                android:layout_gravity="center_horizontal"
                android:textAllCaps="false"
                android:textSize="@dimen/less_small_text_size"
                android:onClick="showDemo"/>-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_code"
                android:background="@android:color/transparent"
                android:textColor="@color/colorLightest"
                android:layout_gravity="center_horizontal"
                android:textAllCaps="false"
                android:textSize="@dimen/less_small_text_size"
                android:onClick="showGithub" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorLightest"
                android:layout_margin="@dimen/margin"
                android:textSize="@dimen/small_text_size"
                android:textAlignment="center"
                android:text="@string/developer_movieplate"/>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</ScrollView>