<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorDarkest"
    android:layout_margin="@dimen/margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skill_title_android"
            android:textSize="@dimen/big_text_size"
            android:textColor="@color/colorLightest"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/margin"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/skill_android"
            android:layout_gravity="center"
            android:textColor="@color/colorLightest"
            android:layout_marginBottom="@dimen/margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skill_sub_title_android"
            android:textSize="@dimen/medium_text_size"
            android:textColor="@color/colorLightest"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skill_content_android"
            android:textSize="@dimen/small_text_size"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/colorLightest"
            android:layout_marginBottom="@dimen/margin"/>

    </LinearLayout>

</ScrollView>