<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorDarkest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/myImage"
            android:src="@drawable/myimage"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myName"
            android:layout_margin="10dp"
            android:textSize="@dimen/big_text_size"
            android:text="@string/my_name"
            android:textColor="@color/colorLightest"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myTitle"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="@dimen/small_text_size"
            android:textColor="@color/colorLightest"
            android:text="@string/my_title"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/shortDescription"
            android:textColor="@color/colorLightest"
            android:text="@string/short_desc"
            android:textSize="@dimen/small_text_size"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/githubUsernameText"
                android:textColor="@color/colorPrimaryDark"
                android:text="Github Username: "
                android:textSize="@dimen/small_text_size"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/githubUsername"
                android:text="@string/my_github_username"
                android:textColor="@color/colorLightest"
                android:textSize="@dimen/small_text_size"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>