<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorDarkest">

    <mehdi.sakout.fancybuttons.FancyButton
        android:layout_width="@dimen/contact_button_width"
        android:layout_height="@dimen/contact_button_height"
        android:id="@+id/github_contact"
        fancy:fb_textSize="@dimen/medium_text_size"
        fancy:fb_defaultColor="@color/colorDarker"
        fancy:fb_textColor="@color/colorLightest"
        fancy:fb_textFont="sans-serif-condensed"
        fancy:fb_text="@string/contact_github"
        fancy:fb_textGravity="center"
        android:onClick="contactGithub"
        fancy:fb_borderWidth="@dimen/margin"
        fancy:fb_borderColor="@color/colorDarkest"
        fancy:fb_fontIconSize="@dimen/medium_text_size"
        fancy:fb_iconPaddingLeft="@dimen/margin"
        fancy:fb_iconPaddingTop="@dimen/margin"
        fancy:fb_iconPaddingRight="@dimen/margin"
        fancy:fb_iconPaddingBottom="@dimen/margin"
        />

    <mehdi.sakout.fancybuttons.FancyButton
        android:layout_width="@dimen/contact_button_width"
        android:layout_height="@dimen/contact_button_height"
        android:id="@+id/linkedin_contact"
        fancy:fb_textSize="@dimen/medium_text_size"
        fancy:fb_defaultColor="@color/colorDarker"
        fancy:fb_textColor="@color/colorLightest"
        fancy:fb_textFont="sans-serif-condensed"
        fancy:fb_text="@string/contact_linkedin"
        fancy:fb_textGravity="center"
        android:onClick="contactLinkedin"
        fancy:fb_borderWidth="@dimen/margin"
        fancy:fb_borderColor="@color/colorDarkest"
        fancy:fb_fontIconSize="@dimen/medium_text_size"
        fancy:fb_iconPaddingLeft="@dimen/margin"
        fancy:fb_iconPaddingTop="@dimen/margin"
        fancy:fb_iconPaddingRight="@dimen/margin"
        fancy:fb_iconPaddingBottom="@dimen/margin"
        />

    <mehdi.sakout.fancybuttons.FancyButton
        android:layout_width="@dimen/contact_button_width"
        android:layout_height="@dimen/contact_button_height"
        android:id="@+id/facebook_contact"
        fancy:fb_textSize="@dimen/medium_text_size"
        fancy:fb_text="@string/contact_facebook"
        fancy:fb_defaultColor="@color/colorDarker"
        fancy:fb_textColor="@color/colorLightest"
        fancy:fb_textFont="sans-serif-condensed"
        fancy:fb_textGravity="center"
        android:onClick="contactFacebook"
        fancy:fb_borderWidth="@dimen/margin"
        fancy:fb_borderColor="@color/colorDarkest"
        fancy:fb_fontIconSize="@dimen/medium_text_size"
        fancy:fb_iconPaddingLeft="@dimen/margin"
        fancy:fb_iconPaddingTop="@dimen/margin"
        fancy:fb_iconPaddingRight="@dimen/margin"
        fancy:fb_iconPaddingBottom="@dimen/margin"
        />

    <mehdi.sakout.fancybuttons.FancyButton
        android:layout_width="@dimen/contact_button_width"
        android:layout_height="@dimen/contact_button_height"
        android:id="@+id/google_plus_contact"
        fancy:fb_textSize="@dimen/medium_text_size"
        fancy:fb_text="@string/contact_google"
        fancy:fb_defaultColor="@color/colorDarker"
        fancy:fb_textColor="@color/colorLightest"
        fancy:fb_textFont="sans-serif-condensed"
        fancy:fb_textGravity="center"
        android:onClick="contactGoogle"
        fancy:fb_borderWidth="@dimen/margin"
        fancy:fb_borderColor="@color/colorDarkest"
        fancy:fb_fontIconSize="@dimen/medium_text_size"
        fancy:fb_iconPaddingLeft="@dimen/margin"
        fancy:fb_iconPaddingTop="@dimen/margin"
        fancy:fb_iconPaddingRight="@dimen/margin"
        fancy:fb_iconPaddingBottom="@dimen/margin"
        />

    <mehdi.sakout.fancybuttons.FancyButton
        android:layout_width="@dimen/contact_button_width"
        android:layout_height="@dimen/contact_button_height"
        android:id="@+id/twitter_contact"
        fancy:fb_textSize="@dimen/medium_text_size"
        fancy:fb_text="@string/contact_twitter"
        fancy:fb_defaultColor="@color/colorDarker"
        fancy:fb_textColor="@color/colorLightest"
        fancy:fb_textFont="sans-serif-condensed"
        fancy:fb_textGravity="center"
        android:onClick="contactTwitter"
        fancy:fb_borderWidth="@dimen/margin"
        fancy:fb_borderColor="@color/colorDarkest"
        fancy:fb_fontIconSize="@dimen/medium_text_size"
        fancy:fb_iconPaddingLeft="@dimen/margin"
        fancy:fb_iconPaddingTop="@dimen/margin"
        fancy:fb_iconPaddingRight="@dimen/margin"
        fancy:fb_iconPaddingBottom="@dimen/margin"
        />

</LinearLayout>